[fix bug 1739742] Setting nowrap for hidden column class. [fix bug 1744460] Setting bg color on TH.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -45,6 +45,7 @@ th.yui-dt-resizeable .yui-dt-liner {
     margin:0;
     padding:0;
     overflow:hidden;
+    white-space:nowrap;
 }
 
 /* vertical and horizontal scrolling */
